Fix dash characters

--- a/_posts/2015-01-21-dream.markdown
+++ b/_posts/2015-01-21-dream.markdown
@@ -44,11 +44,11 @@ I'm very fortunate that I know I have a very supportive network of family and fr
  
 **chase your dreams** This is for one of the most genuine, kind-hearted people I know. She has so many talents but is perhaps too comfortable/lazy to do anything about her dreams! :p
  
-**turn your dreams into plans** This one's for my ultimate planner friend ÔÇô she literally has a project plan for every detail in her life! I hope this will be useful for her house renovation project this year!
+**turn your dreams into plans** This one's for my ultimate planner friend – she literally has a project plan for every detail in her life! I hope this will be useful for her house renovation project this year!
  
 **let your dreams run wild** This one's for the craziest, most free-spirited girl I know, and I hope she never stops dreaming!
  
-p.s. just in case if you thought my handwriting is actually that neat, I cheated! Well, I used a little trick I picked up in primary school art class ÔÇô I printed out the phrases, coloured the back with a blunt pencil, and traced over the top to leave a graphite mark on the notebooks before writing with my Sharpie pen!
+p.s. just in case if you thought my handwriting is actually that neat, I cheated! Well, I used a little trick I picked up in primary school art class – I printed out the phrases, coloured the back with a blunt pencil, and traced over the top to leave a graphite mark on the notebooks before writing with my Sharpie pen!
 
 ![](/content/images/2015/01/photo-1-1.JPG)
 
