Fix issue with é character

--- a/_posts/2015-01-21-dream.markdown
+++ b/_posts/2015-01-21-dream.markdown
@@ -28,7 +28,7 @@ These may seem like a tiny achievement, but it's a massive confidence boost for 
  
 Speaking of dream… I think often we get so caught up in life itself that we forget to take time out to reflect and dream a little. I'm not one for new year's resolutions - mostly because I tend to break them in the blink of an eye - but I've decided that "dream" will be my focus for 2015.
  
-I don't really know what my dream is, except that it's something fun, creative, interactive and surrounded by prettiness (sounds like the opposite of my job, ha!). I've said for years that I want to own a caf├® with a flower shop, but I have no idea if that really is my dream job!
+I don't really know what my dream is, except that it's something fun, creative, interactive and surrounded by prettiness (sounds like the opposite of my job, ha!). I've said for years that I want to own a café with a flower shop, but I have no idea if that really is my dream job!
  
 So this year, I'm going to make time for fun, creative stuff and hopefully figure out what my dream is in the process. I want to cook yummy food and bake pretty cakes, learn floristry and calligraphy, practise photography and develop my own style, and generally create beautiful memories!
  
